# ArmaQDL

./: .editorconfig  .flake8  .gitignore  LICENSE  README.md  armaqdl.py  pyproject.toml
.github/workflows/: build.yml  publish.yml  python.yml  test.yml
armaqdl/: __main__.py  armaqdl.py  config.py  const.py  update.py
config/: settings.toml
src/armaqdl/: armaqdl.py  config.py  config_default.py  settings.py  settings.yml
tests/: test_commands.py  test_config.py
