[build-system]
requires = ["hatchling>=1.11", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "ArmaQDL"
authors = [
  { name="Jonpas", email="jonpas33@gmail.com" },
]
description = "Python program for quick launching various mod development configurations for Arma through a simple CLI."
readme = "README.md"
license = "MIT"
requires-python = ">=3.7"
classifiers = [
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: Microsoft :: Windows",
  "Topic :: Software Development :: Build Tools",
]
dependencies = [
  "platformdirs",
  "toml",
]
dynamic = [
  "version",
]

[project.urls]
"Homepage" = "https://github.com/jonpas/Arma-QDL"
"Bug Tracker" = "https://github.com/jonpas/Arma-QDL/issues"

[project.scripts]
armaqdl = "armaqdl.armaqdl:main"

[tool.hatch.build.targets.sdist]
exclude = [
  "/.github",
]

[tool.hatch.build.targets.wheel]
packages = ["armaqdl", "config"]

[tool.hatch.build.targets.wheel.sources]
"config" = "armaqdl/config"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "armaqdl/_version.py"
